src/objects/Application_Version__c.object
<CustomObject>
    <description>This object is for the Project Central - Application Registry application and supports the &quot;Application&quot; object. This object tracks the different versions of an application.</description>
    <fields>
        <fullName>Application_Link__c</fullName>
        <formula>HYPERLINK(Application__r.Id, Application__r.Name__c ,&quot;_self&quot;)</formula>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <formula>Application__r.Name__c</formula>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application ID</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Application_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IOC__c</fullName>
        <description>Initial Operational Capability - This field represents the planned deployment date of the application.</description>
        <inlineHelpText>Initial Operational Capability - This field represents the planned deployment date of the application.</inlineHelpText>
        <label>IOC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>The website, URL, or other location where the application can be found.</inlineHelpText>
        <label>Location</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <inlineHelpText>Owning Organization</inlineHelpText>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Office of the Chief People Officer</fullName>
                </value>
                <value>
                    <fullName>Office of the Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>Congressional and Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>Office of Citizen Services and Innovative Technologies</fullName>
                </value>
                <value>
                    <fullName>Office of Communications and Marketing</fullName>
                </value>
                <value>
                    <fullName>Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>Office of General Counsel</fullName>
                </value>
                <value>
                    <fullName>Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>Office of Emergency Response and Recovery</fullName>
                </value>
                <value>
                    <fullName>Office of Inspector General</fullName>
                </value>
                <value>
                    <fullName>Board of Contract Appeals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Google Apps</fullName>
                </value>
                <value>
                    <fullName>Force.com</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Versions1</relationshipLabel>
        <relationshipName>Versions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Abbrev__c</fullName>
        <description>An abbreviated Release Notes field.</description>
        <inlineHelpText>An abbreviated Release Notes field.</inlineHelpText>
        <label>Release_Notes_Abbrev</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Notes__c</fullName>
        <description>&quot;This field is used to highlight the primary differences from the previous version&quot;</description>
        <inlineHelpText>This field is used to highlight the primary differences from the previous version</inlineHelpText>
        <label>Release Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Ready For Deployment</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Sunset Planned</fullName>
                </value>
                <value>
                    <fullName>Sunsetted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunset_Date__c</fullName>
        <label>Sunset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Technical Point of Contact</description>
        <inlineHelpText>Technical Point of Contact</inlineHelpText>
        <label>Technical POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Versions (Technical POC)</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_Link__c</fullName>
        <formula>HYPERLINK( Id ,  Version__c  ,&quot;_self&quot;)</formula>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Version</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Application_Name__c</columns>
        <columns>Version_Link__c</columns>
        <columns>Point_of_Contact__c</columns>
        <columns>Platform__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AV-{0000000}</displayFormat>
        <label>Application Version ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>